# cooperative-online-text-editor

./: .gitignore  LICENSE  README.md
PdsProject-GUI/: Makefile  PdsProject.pro  action.cpp  json_comunicator.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_online_synchronizer.cpp  mytextedit.cpp  mytextedit.h  online_synchronizer.h  remotecursor.cpp  remotecursor.h  resources.qrc  shared_editor.cpp  shared_editor.h  smtpclient.cpp  ui_loginwindow.h  ui_mainwindow.h  usertag.cpp  usertag.h
PdsProject-GUI/PdsProject.app/Contents/: Info.plist
PdsProject-GUI/PdsProject.app/Contents/MacOS/: PdsProject
build-PdsProject-Qt_5_13_0_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_online_synchronizer.cpp  qrc_resources.cpp  ui_mainwindow.h
c++ project/: gitignore
c++_project/: test_commit.txt
c++_project/src/: main.cpp
cget/cget/: cget.cmake
qt_project_gui/: CMakeLists.txt  exchangeable.h  main.cpp  resources.qrc
qt_project_gui/data_structure/: action.cpp  action.h  crdt.cpp  crdt.h  exchangable_data.h  exchangeable.h  remotecursor.cpp  remotecursor.h  session_data.h  symbol_id.h
qt_project_gui/forms/: loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytextedit.cpp  mytextedit.h  ui_loginwindow.h  ui_mainwindow.h  usertag.cpp  usertag.h
qt_project_gui/utility/: image_utility.h  json_comunicator.cpp  json_comunicator.h  shared_editor.h
qt_project_gui/web_requests/: ReplyTimeout.cpp  ReplyTimeout.h  online_query.cpp  online_query.h  online_sender.cpp  online_sender.h  online_synchronizer.h  smtpclient.cpp  smtpclient.h
server-cpp/: .gitignore  CMakeLists.txt  crow_all.h  crow_all_mac.h  database.cpp  database.h  exchangable_data.h  exchangeable_data.cpp  exchangeable_data.h  main.cpp  pds.db
